--- a/PublishSubscribePatternSample/PublishSubscribePatternSample.csproj
+++ b/PublishSubscribePatternSample/PublishSubscribePatternSample.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Subscribers\Subscribers.csproj" />
+  </ItemGroup>
+
 </Project>
